force-app/main/default/objects/Business_Unit__c/Business_Unit__c.object-meta.xml
<CustomObject>
    <description>Stores departments or business units that request GenAI cloud services.</description>
    <label>Business Unit</label>
    <nameField>
        <label>Business Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Units</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>