force-app/main/default/objects/Business_Unit__c/fields/Budget_Limit__c.field-meta.xml
<CustomField>
    <fullName>Budget_Limit__c</fullName>
    <label>Budget Limit</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>