force-app/main/default/objects/Business_Unit__c/fields/Department_Type__c.field-meta.xml
<CustomField>
    <fullName>Department_Type__c</fullName>
    <label>Department Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>HR</fullName><default>false</default><label>HR</label></value>
            <value><fullName>Finance</fullName><default>false</default><label>Finance</label></value>
            <value><fullName>Marketing</fullName><default>false</default><label>Marketing</label></value>
            <value><fullName>IT</fullName><default>false</default><label>IT</label></value>
            <value><fullName>Operations</fullName><default>false</default><label>Operations</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>