force-app/main/default/objects/Business_Unit__c/listViews/All_Business_Units.listView-meta.xml
<ListView>
    <fullName>All_Business_Units</fullName>
    <columns>NAME</columns>
    <columns>Department_Type__c</columns>
    <columns>Budget_Limit__c</columns>
    <columns>Manager_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Business Units</label>
</ListView>